tests/NormalTests/paczka1/fuzzy1/79181217.err
Error in line 3: S752 S383 56,2
Error in line 1: RzKNGU S383 59,6
Error in line 10: lbPKIpNLE7 S383 40,82
Error in line 19: lbPKIpNLE7 S724 41,80
Error in line 13: HCN S724 56,9
Error in line 9: lbPKIpNLE7 S383 23,5
Error in line 23: HCN S724 9,6
